# bayer-pos

./: .gitignore  BASLAT.bat  GUNCELLEME-BUILD.bat  GUNCELLEME-KILAVUZU.txt  KURULUM-KILAVUZU.txt  KURULUM.bat  README.md  create_icon.py
docs/: DATABASE-GUVENLIK.txt  KULLANIM-KILAVUZU.txt
local-pos/: .gitignore  index.html  package.json  vite.config.js
local-pos/src/: App.svelte  main.js
local-pos/src-tauri/: Cargo.toml  tauri.conf.json
local-pos/src-tauri/capabilities/: sql-all.json
local-pos/src-tauri/icons/: icon.icns
local-pos/src-tauri/src/: main.rs
local-pos/src/components/admin/: Settings.svelte  StoresViewer.svelte  SyncMonitor.svelte  UserManagement.svelte
local-pos/src/components/login/: Login.svelte
local-pos/src/components/receipt/: Receipt.svelte
local-pos/src/components/refund/: RefundScreen.svelte
local-pos/src/components/reports/: ReportsViewer.svelte
local-pos/src/components/sales/: SalesScreen.svelte
local-pos/src/components/shift/: ShiftManager.svelte
local-pos/src/components/stock/: StockAdjustment.svelte  StockAlerts.svelte
local-pos/src/lib/db/: database.js  schema.sql
local-pos/src/lib/printer/: printerService.js
local-pos/src/stores/: appStore.js
scripts/: BASLAT.bat  GUNCELLEME-BUILD.bat  KAPAT.bat  KURULUM.bat
